# blinkybot

./: .gitmodules  Cargo.toml
.github/workflows/: publish_webapp.yml
blinkybot-firmware/: Cargo.toml  memory.x
blinkybot-firmware/.cargo/: config.toml
blinkybot-firmware/src/: as1115.rs  config_store.rs  error.rs  main.rs  webusb.rs
blinkybot-rpc/: Cargo.toml
blinkybot-rpc/src/: lib.rs
blinkybot-ui/: README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
blinkybot-ui/blinkybot-ui-wasm/: Cargo.toml  LICENSE_MIT
blinkybot-ui/blinkybot-ui-wasm/src/: lib.rs
blinkybot-ui/src/: App.vue  main.ts
blinkybot-ui/src/components/: Expression.vue  Pixel.vue
blinkybot-ui/src/router/: index.ts
blinkybot-ui/src/stores/: blinkybot.ts
blinkybot-ui/src/views/: ExpressionView.vue  HomeView.vue  SettingsView.vue
src/: main.rs
