[package]
name = "blinkybot"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.6.0", features = [
	"task-arena-size-98304",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"integrated-timers",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", version = "0.2.0", features = [
	"defmt",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
	"rp235xa",
	"binary-info",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.3.2", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embedded-hal-async = "1.0.0"


is31fl3731-async = { path = "../is31fl3731-async", features = ["charlie_wing"] }
oorandom = "11.1.4"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[profile.release]
debug = 2
