[package]
name = "blinkybot-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
blinkybot-rpc = { path = "../blinkybot-rpc", features = ["defmt"] }
is31fl3731-async = { path = "../third_party/is31fl3731-async", features = [
	"charlie_wing",
] }


embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.1", features = [
	"task-arena-size-98304",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
	"defmt",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
	"rp2040",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = [
	"defmt",
	"tcp",
	"udp",
	#"raw",
	"dhcpv4",
	"medium-ethernet",
	"dns",
	"proto-ipv4",
	"proto-ipv6",
	#"multicast",
] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
#embassy-usb-logger = { version = "0.2.0" }
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
#usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"
oorandom = "11.1.4"

[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "10a9766046f7f8a2cf1c7b91209432ee15ee22a9" }
postcard-rpc = { path = "../third_party/postcard-rpc/source/postcard-rpc" }
